Set fixed width for aside items on mobile devices

--- a/scss/md2.scss
+++ b/scss/md2.scss
@@ -565,7 +565,8 @@ footer.md2-footer {
             align-items: center;
 
             div {
-                padding: 12px 30px;
+                width: 80px;
+                padding: 12px 10px;
                 margin: 0 3px;
             }
         }
